the_project/manifests/gke/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: todo-app-gateway
  namespace: project
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
  namespace: project
spec:
  parentRefs:
    - name: todo-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /posts
      backendRefs:
        - name: todo-backend-svc
          port: 8085
    - matches:
        - path:
            type: PathPrefix
            value: /todos
      backendRefs:
        - name: todo-backend-svc
          port: 8085
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todo-app-svc
          port: 1234
